k8s/takserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: takserver
  namespace: takserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: takserver
  template:
    metadata:
      labels:
        app: takserver
    spec:
      containers:
      - name: takserver
        image: registry.docker-registry.svc.cluster.local:5000/tak-server:v2 # Build your image
        ports:
        - containerPort: 8089
        - containerPort: 8443
        - containerPort: 8444
        - containerPort: 8446
        volumeMounts:
        - name: config
          mountPath: /opt/tak/CoreConfig.xml
          subPath: CoreConfig.xml
        - name: logs
          mountPath: /opt/tak/logs
        - name: data
          mountPath: /opt/tak/data
      volumes:
      - name: config
        configMap:
          name: takserver-config
      - name: logs
        emptyDir: {}
      - name: data
        emptyDir: {}
