k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: takserver-db
  namespace: takserver
spec:
  selector:
    app: takserver-db
  ports:
  - port: 5432
    targetPort: 5432
